# cg3

./: .gitignore  CMakeLists.txt  freeglut.lib  freeglutd.lib  littlesnake.c  littlesnake.h  main.c  readme.md
code/: littlesnake.c  littlesnake.h  main.c
